2005-09-23 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/iomxx0_1.h (PCIFR): Change address from 0x1C to 0x1B

2005-09-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h (struct __file): Add the __SMALLOC flag bit.
	(fdev_close): add this macro as a hook to destroy library resources
	when deleting fdev_setup_stream()-initialized streams.
	* libc/fdevopen.c: Keep track of malloc()ed streams by setting the
	__SMALLOC flag.
	* libc/fclose.c: Bail out unless __SMALLOC is set, so we don't
	accidentally try to free streams that have been set up by
	fdev_setup_stream().

2005-09-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/doxygen.config.in: use __DOXYGEN__ instead of DOXYGEN to
	encapsulate documentation-only code, so we are on the safe side wrt.
	using a reserved macro name that cannot collide with an application.
	* include/assert.h: (Ditto.)
	* include/math.h: (Ditto.)
	* include/setjmp.h: (Ditto.)
	* include/stdint.h: (Ditto.)
	* include/stdio.h: (Ditto.)
	* include/stdlib.h: (Ditto.)
	* include/avr/delay.h: (Ditto.)
	* include/avr/eeprom.h: (Ditto.)
	* include/avr/interrupt.h: (Ditto.)
	* include/avr/pgmspace.h: (Ditto.)
	* include/avr/sleep.h: (Ditto.)
	* include/avr/wdt.h: (Ditto.)
	* libc/misc/itoa.S: (Ditto.)
	* libc/misc/ltoa.S: (Ditto.)
	* libc/misc/mul10.S: (Ditto.)
	* libc/misc/mulsi10.S: (Ditto.)
	* libc/misc/ultoa.S: (Ditto.)
	* libc/misc/utoa.S: (Ditto.)
	* libc/pmstring/memcpy_P.S: (Ditto.)
	* libc/pmstring/strcasecmp_P.S: (Ditto.)
	* libc/pmstring/strcat_P.S: (Ditto.)
	* libc/pmstring/strcmp_P.S: (Ditto.)
	* libc/pmstring/strcpy_P.S: (Ditto.)
	* libc/pmstring/strlcat_P.S: (Ditto.)
	* libc/pmstring/strlcpy_P.S: (Ditto.)
	* libc/pmstring/strlen_P.S: (Ditto.)
	* libc/pmstring/strncasecmp_P.S: (Ditto.)
	* libc/pmstring/strncat_P.S: (Ditto.)
	* libc/pmstring/strncmp_P.S: (Ditto.)
	* libc/pmstring/strncpy_P.S: (Ditto.)
	* libc/pmstring/strnlen_P.S: (Ditto.)
	* libc/stdlib/atoi.S: (Ditto.)
	* libc/stdlib/atol.S: (Ditto.)